force-app/main/default/objects/logger__c/logger__c.object-meta.xml
<CustomObject>
    <label>logger</label>
    <nameField>
        <label>logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>loger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>