force-app/main/default/objects/logger__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <label>message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>