force-app/main/default/objects/logger__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>loger</relationshipLabel>
    <relationshipName>loger</relationshipName>
    <type>Lookup</type>
</CustomField>